--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="conteudo">
                 <textarea id="textoDigitado" placeholder="Digite seu texto!!!"></textarea>
             <div class="retorno">                
-                <img   id="img" src="img\Figura.png" alt="garoto com a lupa" />
+                <img   id="img" src="img\figura.png" alt="garoto com a lupa" />
                 <p id="textoRetorno" value="a"></p>                           
                 <button onclick="copiarTexto()" id="botao3">Copiar</button>
             </div>
