--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <body>
         <header></header>
         <main class="apresentacao">
-            <img  class="logo" src="img\logo.png" alt="Logo Alura"/>
+            <img  class="logo" src="img/logo.png" alt="Logo Alura"/>
             <div class="conteudo">
                 <textarea id="textoDigitado" placeholder="Digite seu texto!!!"></textarea>
             <div class="retorno">                
-                <img   id="img" src="img\figura.png" alt="garoto com a lupa" />
+                <img   id="img" src="img/figura.png" alt="garoto com a lupa" />
                 <p id="textoRetorno" value="a"></p>                           
                 <button onclick="copiarTexto()" id="botao3">Copiar</button>
             </div>
